# Ada-Marie-App

./: .gitignore  README.md
apps/ios/: README.md  SwiftSources.input.xcfilelist  project.yml
apps/ios/Sources/: AdaMarieApp.swift  Info.plist
apps/ios/Sources/Calendar/: CalendarService.swift
apps/ios/Sources/Camera/: CameraController.swift
apps/ios/Sources/Capabilities/: NodeCapabilityRouter.swift
apps/ios/Sources/Chat/: ChatSheet.swift  IOSGatewayChatTransport.swift
apps/ios/Tests/: AppCoverageTests.swift  CameraControllerClampTests.swift  CameraControllerErrorTests.swift  DeepLinkParserTests.swift  GatewayConnectionControllerTests.swift  GatewayDiscoveryModelTests.swift  GatewayEndpointIDTests.swift  GatewaySettingsStoreTests.swift  IOSGatewayChatTransportTests.swift  Info.plist  KeychainStoreTests.swift  NodeAppModelInvokeTests.swift  ScreenControllerTests.swift  ScreenRecordServiceTests.swift  SettingsNetworkingHelpersTests.swift  SwiftUIRenderSmokeTests.swift  VoiceWakeGatewaySyncTests.swift  VoiceWakeManagerExtractCommandTests.swift  VoiceWakeManagerStateTests.swift  VoiceWakePreferencesTests.swift
apps/ios/fastlane/: Fastfile  SETUP.md
apps/macos/: Package.swift  README.md
apps/macos/Icon.icon/: icon.json
apps/shared/AdaMarieKit/: Package.swift
brain-server/: pyproject.toml
brain-server/ada_brain/: __init__.py  server.py
resources/mcp-config/: README.md  mcp-config-essential.json  mcp-config-full.json  mcp-config-minimal.json
resources/memories/: active_projects.md  ada_marie_core.md  session_notes.md  user_context.md
(+312 files in other folders)
